# GEMSGUI

./: .gitignore  CMakeLists.txt  README.md  README4.md  environment.devenv.yml  environment.yml  gems3gui.pro  gems3gui_with_gems3k_source.pro  install-dependencies.sh
.github/workflows/: ci-build.yml  deploy-linux.yml  deploy-macos.yml  deploy-windows.yml
App/: CMakeLists.txt  gem-selektor.desktop  gem-selektor.rc  main.cpp
GUI/: CMakeLists.txt
GUI/Dataman/: v_dbfile.h  v_dbm.h  v_dbm1.cpp  v_dbm2.cpp  v_module.cpp  v_module.h  v_object.h  v_user.cpp  v_user.h  v_vals.cpp  v_vals_impl.h
GUI/Dialogs4/: AutoPhaseDialog4.ui  CalcCheckDialog.cpp  CalcCheckDialog.h  ElementsDialog.cpp  ElementsDialog.h  GemsMainWindow.h  GemsMainWindow4.ui  HelpWindow.cpp  KeyDialog.h  KeyFilter.h  LookupDialog4.ui  SetFiltersDialog4.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog4.ui
GUI/Services4/: Services4.pri  help.cpp  model_tree.cpp  module_w.h  page_f.cpp  page_f.h  service.h  units.cpp  visor.cpp  visor.h
GUI/charts/: GraphDialogN.h
Modules/: Modules.pri  gemsgui_version.h  m_gem2mtfor.cpp  m_param.cpp  m_param.h  m_proces.cpp  m_reac2.cpp  m_rtparm.cpp  s_formula.cpp  s_formula.h  s_supcrt2.cpp  v_thermofun.cpp
Modules/Submods/: ms_mtparm.cpp  ms_multi_new.h  ms_mupmph.cpp  ms_rmults.cpp  ms_rmults.h
Resources/: README-linux.md  README-macos.txt  README-windows.txt  README.md  README.txt  gemsgui-config.json  rungems3-mac.sh  rungems3.bat  rungems3.sh
Resources/DB.default/: dcomp.psinagra2020.main.clays.ver25.ndx  dcomp.psinagra2020.main.ver25.ndx  phase.psinagra2020.main.ver25.ndx  reacdc.psinagra2020.main.ver25.ndx  sdref.psinagra2020.main.ver25.ndx
Resources/doc/html/: README.md  about.txt  gems3help.qhc  gems3helpconfig.qhp  gems3helpconfig.toc  gems_tutorial.html  gems_workflow.html  generate_gems3help.bat  generate_gems3help.sh  run_assistant.bat  run_assistant.sh
Resources/help/: gems3help.qch  gems3help.qhc
cmake/: gemsgui_version.h.in
cmake/modules/: GEMSGUIFindDeps.cmake
tools/: CMakeLists.txt  README.md  config.cpp  config.h  help.cpp  help.h  ini2json.cpp  qhp-generator.cpp  tools.pro
